changed font and alignment with flex

--- a/templates/polaroid/polaroid.html
+++ b/templates/polaroid/polaroid.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link rel="stylesheet" href="polaroid.css">
-	</head>
+<head>
+	<link rel="stylesheet" href="polaroid.css">
+	<link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
+</head>
 <body>
 	<!-- <header id="main-header" > -->
 	<!-- </header> -->
