--- a/templates/polaroid/polaroid.css
+++ b/templates/polaroid/polaroid.css
@@ -20,6 +20,7 @@ body {
 .galery {
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: space-evenly;
 
 	/* column-width: calc(var(--polaroid-size) * 0.823057 ); */
 	/* column-fill: balance; */
@@ -52,7 +53,7 @@ body {
 	transform: rotate(calc(var(--rotation, 0deg)));
 
 	padding: calc(var(--polaroid-size) * 0.054217);
-	margin: 0.5em auto;
+	margin: 0.25em 0.25em;
 
 	break-inside: avoid;
 	background: var(--paper-color, white); 
@@ -60,8 +61,12 @@ body {
 }
 .polaroid > figcaption {
 	flex-grow: 1;
-	overflow: hidden;
+
+	font-family: 'Caveat', cursive;
+	font-size: 1.7rem;
+
 	text-align-last: center;
+	overflow: hidden;
 }
 
 .polaroid > .photo-area > img {
