--- a/Website/headerex2.css
+++ b/Website/headerex2.css
@@ -1,39 +1,4 @@
-.Header_style {
-  box-shadow: 5cm;
-  text-align: left;
-  background-color:rgb(223, 222, 202);
-}
 
-.Header_large {
-  display: flex;
-  flex-grow: 2;
-}
-
-.Header_small {
-  display: inline-flex;
-  flex-grow: 3;
-  flex-shrink:2;
-  transform: rotate(7deg);
-  transform-origin: 0;
-  text-shadow: 1px -1px 0 black; 
-  color:rgb(70, 122, 71);
-  font-family: fantasy;
-  font-weight:900;
-  font-size: 20px;
-  padding-left: 10px;
-}
-
-
-header {
-  display: box;
-  a:hover {
-    color: rgb(141, 228, 153);
-  }
-}
-
-a {
-  color: forestgreen;
-}
 
 .title {
     border-color: bisque;
@@ -46,32 +11,60 @@ a {
   transform: rotate(3deg);
     margin-trim: all;
     text-rendering:geometricPrecision;
-    padding-left: 10px;
+    padding: 10px;
+  text-overflow:ellipsis;  
+  width: fit-content;  
 
 }
 
-
-
-
-ul {
-  list-style-type: none;
-  margin-top: 0;
+.Header_style {
+  box-shadow: 5cm;
+  text-align: left;
+  background-color:rgb(223, 222, 202);
 }
 
-.boldstyle > h1 {
-  color:deeppink;
+.Header_large {
+  display: inline-flex;
+  align-items:normal;
+  flex-grow: 3;
+  flex-shrink: 1;
+  border-color: black;
+  margin-top: -20px;
+  padding-bottom: 20px;
 }
 
-.h1test {
-  color:deeppink;
+.Header_small {
+  display: flex;
+  flex-flow: row wrap;
+  transform: rotate(7deg);
+  transform-origin: 0;
+  text-shadow: 1px -1px 0 black; 
+  color:rgb(70, 122, 71);
+  font-family: fantasy;
+  font-weight:900;
+  font-size: 20px;
+  padding-left: 10px;
+  padding-right: 20px;
 }
+
+
+header {
+  a:hover {
+    color: rgb(141, 228, 153);
+  }
+}
+
+a {
+  color: forestgreen;
+}
+
 
 body {
-  border:10px solid palevioletred;
+  border:10px solid rgb(148, 133, 138);
   margin: 0;
   min-height: 100vh;
   box-sizing: border-box;
-  background-color: #dc9dd2c4;
+  background-color: #e1d9e0c4;
 }
 /*@media screen and (max-width: 600px) {
   .shopgtid {
